--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>TCHO Stanford</title>
+  </head>
+  <body>
+  Tcho At Stanford
+  </body>
+</html>
