--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ Template 2077 Modern Town
 http://www.tooplate.com/view/2077-modern-town
 
 -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-   	<link rel="stylesheet" href="css/owl.theme.css">
-	<link rel="stylesheet" href="css/owl.carousel.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="tchostanford.github.io/css/bootstrap.min.css">
+	<link rel="stylesheet" href="tchostanford.github.io/css/animate.min.css">
+	<link rel="stylesheet" href="tchostanford.github.io/css/font-awesome.min.css">
+   	<link rel="stylesheet" href="tchostanford.github.io/css/owl.theme.css">
+	<link rel="stylesheet" href="tchostanford.github.io/css/owl.carousel.css">
+	<link rel="stylesheet" href="tchostanford.github.io/css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	
 </head>
