tcho stanford starting out

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Modern Town - Responsive HTML5 Template</title>
+	<title>Tcho at Stanford</title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,9 +35,9 @@ http://www.tooplate.com/view/2077-modern-town
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<h3 class="wow fadeInDown" data-wow-delay="0.2s">FULLY RESPONSIVE HTML5 TEMPLATE</h3>
-				<h1 class="wow fadeInDown">MODERN TOWN</h1>
-				<a href="#" class="btn btn-danger wow fadeInUp" data-wow-delay="0.4s">DOWNLOAD</a>
+				<!-- <h3 class="wow fadeInDown" data-wow-delay="0.2s">JUST SAY "CHO"</h3> -->
+				<h1 class="wow fadeInDown">TCHO @ Stanford</h1>
+				<a href="#" class="btn btn-danger wow fadeInUp" data-wow-delay="0.4s">BUY NOW</a>
 				<a href="#about" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s">LEARN MORE</a>
 			</div>
 
