--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ http://www.tooplate.com/view/2077-modern-town
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<!-- <h3 class="wow fadeInDown" data-wow-delay="0.2s">JUST SAY "CHO"</h3> -->
+				<h3 class="wow fadeInDown" data-wow-delay="0.2s">JUST SAY "CHO"</h3>
 				<h1 class="wow fadeInDown">TCHO @ Stanford</h1>
 				<a href="#" class="btn btn-danger wow fadeInUp" data-wow-delay="0.4s">BUY NOW</a>
 				<a href="#about" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s">LEARN MORE</a>
@@ -80,14 +80,14 @@ http://www.tooplate.com/view/2077-modern-town
 		<div class="row">
         
 			<div class="col-md-6 col-sm-12">
-				<img src="images/about-img-1.jpg" class="img-responsive" alt="about img 1">
+				<img src="images/tcho_background.jpg" class="img-responsive" alt="about img 1">
 			</div>
             
 			<div class="col-md-6 col-sm-12">
 				<div class="about-des">
-					<h4>The most active lifestyle</h4>
-					<h3>Living in MODERN TOWN</h3>
-					<p>This is new HTML5 template that is easy to modify and apply for any kind of your website. This layout is based on Bootstrap v3.3.5 responsive framework. Visit <a rel="nofollow" href="http://www.tooplate.com" target="_parent">Tooplate</a> for more website themes or templates. Credits go to <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> and <a rel="nofollow" href="http://pixabay.com" target="_parent">Pixabay</a> for images. Lorem ipsum dolor sit amet, maecenas eget vestibulum.</p>
+					<h4>Better beans to make better chocolate.</h4>
+					<h3>Fair Trade Chocolate</h3>
+					<p>Most cacao farmers have never tasted the chocolate that their produce is made into. TCHO Source is a one-of-a-kind program that addresses this gap in understanding. TCHO Source partners with cacao farmers, cooperatives, and cocoa research institutes around the globe, with the goal to produce the best cacao beans possible. </p>
 				</div>
 			</div>
 
@@ -112,13 +112,13 @@ http://www.tooplate.com/view/2077-modern-town
 </section>
 
 <!-- Testimonial section
-================================================== -->
+================================================== 
 <section id="testimonial" class="parallax-section">
 	<div class="container">
 		<div class="row">
 
 			<!-- Service Owl Carousel section
-			================================================== -->
+			================================================== 
 			<div id="owl-testimonial" class="owl-carousel">
 
 				<div class="item">
@@ -154,14 +154,14 @@ http://www.tooplate.com/view/2077-modern-town
 
 		</div>
 	</div>
-</section>
+</section> -->
 
 
 
 
 
 <!-- Counter section
-================================================== -->
+================================================== 
 <section id="counter" class="paralla-section">
 	<div class="container">
 		<div class="row">
@@ -186,11 +186,11 @@ http://www.tooplate.com/view/2077-modern-town
 
 		</div>
 	</div>
-</section>
+</section> -->
 
 
 <!-- blog section
-================================================== -->
+==================================================
 <section id="blog" class="paralla-section">
 	<div class="container">
 		<div class="row">
@@ -253,17 +253,15 @@ http://www.tooplate.com/view/2077-modern-town
 
 		</div>
 	</div>
-</section>
+</section>  -->
 
 
 <!-- Contact section
 ================================================== -->
-<section id="contact" class="parallax-section">
+
+<!-- <section id="contact" class="parallax-section">
 	<div class="container">
 		<div class="row">
-
-			<!-- Contact form section
-			================================================== -->
 			<div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-delay="0.6s">
 				<form action="#" method="post">
 					<div class="col-md-12 col-sm-12">
@@ -278,8 +276,6 @@ http://www.tooplate.com/view/2077-modern-town
 				</form>
 			</div>
 
-			<!-- Contact detail section
-			================================================== -->
 			<div class="col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.9s">
 				<div class="contact-detail">
 					<h2>CONTACT US</h2>
@@ -297,7 +293,7 @@ http://www.tooplate.com/view/2077-modern-town
 
 		</div>
 	</div>
-</section>
+</section> -->
 
 
 <!-- Footer section
@@ -346,7 +342,7 @@ http://www.tooplate.com/view/2077-modern-town
 		</div>
 	</div>
 
-</footer>
+</footer> 
 
 <!-- Javascript 
 ================================================== -->
