hopefully fix color

--- a/index.html
+++ b/index.html
@@ -57,15 +57,12 @@ http://www.tooplate.com/view/2077-modern-town
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand">Modern Town</a>
+			<a href="#" class="navbar-brand">TCHO @ Stanford</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right main-navigation">
 				<li><a href="#home" class="smoothScroll">HOME</a></li>
 				<li><a href="#about" class="smoothScroll">ABOUT</a></li>
-                <li><a href="#testimonial" class="smoothScroll">TESTIMONIALS</a></li>
-				<li><a href="#blog" class="smoothScroll">BLOG</a></li>
-				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
 			</ul>
 		</div>
 
