--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114929092-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-114929092-1');
+</script>
 	<meta charset="utf-8">
 	<title>Tcho at Stanford</title>
 
@@ -316,32 +324,25 @@ http://www.tooplate.com/view/2077-modern-town
 
 			<div class="col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
 				<h2>Tcho at Stanford</h2>
-				<p>We are a group of Stanford students in MS&E 271 (Global Entrepreneurial Marketing) working with TCHO. Information about Tcho from the <a href="https://tcho.com/pages/explore"> Tcho Website </a> </p>
+				<p>We are a group of Stanford students in MS&E 271 (Global Entrepreneurial Marketing) working with TCHO Chocolate! Information about Tcho from the <a href="https://tcho.com/pages/explore"> Tcho Website. </a> </p>
 				<p>Copyright &copy; 2017 Tcho 
                 
                 | Design: <a rel="nofollow" href="http://www.tooplate.com" target="_parent">Tooplate</a></p>
 			</div>
 			<div class="link-list col-md-2 col-sm-2 wow fadeInUp" data-wow-delay="0.6s">
-				<h2>Company</h2>
-				<a href="#">About</a>
-                <a href="#">Blog</a>
+				<h2>Tcho at Stanford</h2>
+				<a href="#about">About</a>
 				<a href="#">Team</a>
-				<a href="#">Career</a>
 			</div>
 			<div class="link-list col-md-2 col-sm-2 wow fadeInUp" data-wow-delay="0.6s">
-				<h2>Support</h2>
-				<a href="#">Email Us</a>
-				<a href="#">FAQs</a>
-				<a href="#">Service Terms</a>
-				<a href="#">Licenses</a>
+				<h2>Contact us</h2>
+				<a href="href="tchoatstanford@gmail.com"">Email Us</a>
 			</div>
 			<div class="col-md-2 col-sm-2 wow fadeInUp" data-wow-delay="0.9s">
 				<h2>Network</h2>
 				<ul class="social-icon">
-					<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
+					<li><a href="https://www.facebook.com/Tchoatstanford/" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
 					<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
-					<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-behance wow fadeIn" data-wow-delay="1s"></a></li>
 				</ul>
 			<div>
 
