--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ http://www.tooplate.com/view/2077-modern-town
 			<div class="col-md-12 col-sm-12">
 				<h3 class="wow fadeInDown" data-wow-delay="0.2s">JUST SAY "CHO"</h3>
 				<h1 class="wow fadeInDown">TCHO @ Stanford</h1>
-				<a href="#" class="btn btn-danger wow fadeInUp" data-wow-delay="0.4s">BUY NOW</a>
+				<a href="https://tcho.com/collections" class="btn btn-danger wow fadeInUp" data-wow-delay="0.4s">BUY NOW</a>
 				<a href="#about" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s">LEARN MORE</a>
 			</div>
 
