changed image for unique flavors

--- a/cocoa.html
+++ b/cocoa.html
@@ -127,7 +127,7 @@ http://www.tooplate.com/view/2077-modern-town
 			</div>
 
 			<div class="col-md-6 col-sm-12">
-				<img src="images/chocos_white.jpg" class="img-responsive" alt="about img 1">
+				<img src="images/many_flavors.png" class="img-responsive" alt="about img 1">
 			</div>
 
 		</div>
